tests/failing/automatic_quotation_mark_insertion.db
print("Hello world // This is fine as well